# deploy-freeze-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/deploy_freeze_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_deploy_freeze_check.py
